--- a/ClientChat/pom.xml
+++ b/ClientChat/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
     <artifactId>ClientChat</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.5</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
